.taskcat/.remote_templates/uydxqhhgvskdswsl.template
AWSTemplateFormatVersion: '2010-09-09'
Description: Cribl LogStream Free Distributed Deployment (x86_64)
Parameters:
  workerCount:
    Description: 'REQUIRED: Enter the number of worker nodes desired'
    Type: String
  vpcId:
    Description: 'REQUIRED: ID of your existing VPC.'
    Type: AWS::EC2::VPC::Id
  subnetIds:
    Description: 'REQUIRED: Select 2 subnet Ids in different AZs. These subnets must
      be in the same VPC as VPC ID above.'
    Type: List<AWS::EC2::Subnet::Id>
  webAccessCidr:
    Type: String
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: 'REQUIRED: The CIDR IP range permitted to access the LogStream web
      console. We recommend you set this value to a trusted IP range.'
  leaderInstanceType:
    Description: EC2 instance type to provision the LogStream leader instance. If
      none specified, c5.2xlarge will be used.
    Type: String
    Default: c5.2xlarge
    AllowedValues:
    - c5.large
    - c5.xlarge
    - c5.2xlarge
    - c5.4xlarge
    - c5d.large
    - c5d.xlarge
    - c5d.2xlarge
    - c5d.4xlarge
    - c5a.large
    - c5a.xlarge
    - c5a.2xlarge
    - c5a.4xlarge
    - c5ad.large
    - c5ad.xlarge
    - c5ad.2xlarge
    - c5ad.4xlarge
    ConstraintDescription: Must contain valid instance type
  workerInstanceType:
    Description: EC2 instance type to provision the LogStream worker instance. If
      none specified, c5.2xlarge will be used.
    Type: String
    Default: c5.2xlarge
    AllowedValues:
    - c5.large
    - c5.xlarge
    - c5.2xlarge
    - c5.4xlarge
    - c5d.large
    - c5d.xlarge
    - c5d.2xlarge
    - c5d.4xlarge
    - c5a.large
    - c5a.xlarge
    - c5a.2xlarge
    - c5a.4xlarge
    - c5ad.large
    - c5ad.xlarge
    - c5ad.2xlarge
    - c5ad.4xlarge
    ConstraintDescription: Must contain valid instance type
  AdditionalPolicies:
    Default: arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore,arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
    Description: A comma separated list of Policy ARNs to add to the IAM role used
      by Logstream instances. Append to defaults, DO NOT REMOVE!
    Type: CommaDelimitedList
Mappings:
  RegionMap:
    ap-northeast-1:
      HVM64: ami-058bb33212bdfa544
    ap-northeast-2:
      HVM64: ami-0e7eabfb7336e95e3
    ap-south-1:
      HVM64: ami-026228172afa592ee
    ap-southeast-1:
      HVM64: ami-04e3f90ee9e8a6f53
    ap-southeast-2:
      HVM64: ami-02cad52ffc33a75c6
    ca-central-1:
      HVM64: ami-0574fed17f29ddad6
    eu-central-1:
      HVM64: ami-04811c6bed005b66a
    eu-north-1:
      HVM64: ami-0c7372d41df744985
    eu-west-1:
      HVM64: ami-0e55344ab00db0aa6
    eu-west-2:
      HVM64: ami-0de6890f8313fb81c
    eu-west-3:
      HVM64: ami-09eeed0d73f91087c
    sa-east-1:
      HVM64: ami-012e6dc4c48f6595b
    us-east-1:
      HVM64: ami-0800f811f8f4b958b
    us-east-2:
      HVM64: ami-00dbe21c9dd5e8e3a
    us-west-1:
      HVM64: ami-0193641ec5f0891d4
    us-west-2:
      HVM64: ami-0418b449d23da99e5
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: leader Instance Configuration
      Parameters:
      - leaderInstanceType
    - Label:
        default: Worker Instance Configuration
      Parameters:
      - workerInstanceType
      - workerCount
    - Label:
        default: Network Configuration
      Parameters:
      - vpcId
      - subnetIds
      - webAccessCidr
    - Label:
        default: Advanced Settings
      Parameters:
      - AdditionalPolicies
    ParameterLabels:
      leaderInstanceType:
        default: leader Node EC2 Instance Type
      workerInstanceType:
        default: Worker Nodes EC2 Instance Type
      workerCount:
        default: Worker Count
      vpcId:
        default: VPC ID
      subnetIds:
        default: Subnet IDs
      webAccessCidr:
        default: Web Access CIDR
      AdditionalPolicies:
        default: IAM Policies for node instance profiles
Outputs:
  logstreamWebUrlPublic:
    Value:
      Fn::Sub: http://${LeaderLoadBalancerExternal.DNSName}:9000/login
    Description: Cribl LogStream Web URL
  logstreamWebAccessCreds:
    Value: admin / Leader EC2 Instance ID
    Description: Default Web Access Credentials
Resources:
  ec2leaderSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cribl LogStream Access
      VpcId:
        Ref: vpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 9000
        ToPort: 9000
        CidrIp:
          Ref: webAccessCidr
        Description: UI access to the LogStream leader instance
      - IpProtocol: tcp
        FromPort: 4200
        ToPort: 4200
        CidrIp:
          Ref: webAccessCidr
        Description: Cluster communications between leader and workers
      SecurityGroupEgress:
      - IpProtocol: '-1'
        CidrIp: 0.0.0.0/0
        Description: Egress access
  LeaderLoadBalancerExternal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Scheme: internet-facing
      IpAddressType: ipv4
      SecurityGroups:
      - Ref: ec2leaderSecurityGroup
      Subnets:
      - Fn::Select:
        - 0
        - Ref: subnetIds
      - Fn::Select:
        - 1
        - Ref: subnetIds
  LeaderLoadBalancerInternal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: network
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
      - Fn::Select:
        - 0
        - Ref: subnetIds
      - Fn::Select:
        - 1
        - Ref: subnetIds
  LeaderCriblTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LeaderLoadBalancerExternal
    Properties:
      HealthCheckPort: '9000'
      HealthCheckProtocol: HTTP
      Port: 9000
      Protocol: HTTP
      TargetType: instance
      VpcId:
        Ref: vpcId
  CriblLeaderWebListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: LeaderCriblTargetGroup
      LoadBalancerArn:
        Ref: LeaderLoadBalancerExternal
      Port: 9000
      Protocol: HTTP
  WorkerCriblTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LeaderLoadBalancerInternal
    Properties:
      HealthCheckPort: '4200'
      HealthCheckProtocol: TCP
      Port: 4200
      Protocol: TCP
      TargetType: instance
      VpcId:
        Ref: vpcId
  CriblWorkerAdminListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: WorkerCriblTargetGroup
      LoadBalancerArn:
        Ref: LeaderLoadBalancerInternal
      Port: 4200
      Protocol: TCP
  WorkerCriblTCPJSONTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LeaderLoadBalancerInternal
    Properties:
      HealthCheckPort: '10001'
      HealthCheckProtocol: TCP
      Port: 10001
      Protocol: TCP
      TargetType: instance
      VpcId:
        Ref: vpcId
  CriblWorkerTCPJSONListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: WorkerCriblTCPJSONTargetGroup
      LoadBalancerArn:
        Ref: LeaderLoadBalancerInternal
      Port: 10001
      Protocol: TCP
  WorkerCriblTCPRAWTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: LeaderLoadBalancerInternal
    Properties:
      HealthCheckPort: '7777'
      HealthCheckProtocol: TCP
      Port: 7777
      Protocol: TCP
      TargetType: instance
      VpcId:
        Ref: vpcId
  CriblWorkerTCPRAWListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: WorkerCriblTCPRAWTargetGroup
      LoadBalancerArn:
        Ref: LeaderLoadBalancerInternal
      Port: 7777
      Protocol: TCP
  CriblLeaderWebListenerRule1:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn:
          Ref: LeaderCriblTargetGroup
      Conditions:
      - Field: http-request-method
        HttpRequestMethodConfig:
          Values:
          - GET_OR_HEAD
      ListenerArn:
        Ref: CriblLeaderWebListener
      Priority: 1
  ec2WorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cribl LogStream Ingress and Egress for Ports
      VpcId:
        Ref: vpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 10001
        ToPort: 10001
        CidrIp:
          Ref: webAccessCidr
        Description: TCP-raw Data Collection Ingress
      - IpProtocol: tcp
        FromPort: 7777
        ToPort: 7777
        CidrIp:
          Ref: webAccessCidr
        Description: TCP-json Data Collection Ingress
      SecurityGroupEgress:
      - IpProtocol: '-1'
        CidrIp: 0.0.0.0/0
        Description: Egress access
  PrivateLinklInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpointService
    Properties:
      NetworkLoadBalancerArns:
      - Ref: LeaderLoadBalancerInternal
      AcceptanceRequired: false
  s3DefaultDestinationBucket:
    Type: AWS::S3::Bucket
    Properties:
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
      - Key: Name
        Value: Cribl LogStream default destination bucket
  LogstreamRole:
    Type: AWS::IAM::Role
    Properties:
      Path:
        Fn::Sub: /logstream/${AWS::StackName}/
      Description: Cribl LogStream  IAM role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      ManagedPolicyArns:
        Ref: AdditionalPolicies
      Policies:
      - PolicyName: S3Destinations
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - s3:PutObject
            - s3:GetObject
            - s3:ListBucket
            - s3:GetBucketLocation
            Resource:
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}/*
      - PolicyName: S3Sources
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - s3:GetObject
            - s3:GetBucketLocation
            Resource:
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}/*
      - PolicyName: KinesisSources
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - kinesis:GetRecords
            - kinesis:GetShardIterator
            - kinesis:ListShards
            NotResource: '*'
      - PolicyName: SecretsManagerRead
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - secretsmanager:GetSecretValue
            Resource:
            - Ref: clusterAuthToken
      Tags:
      - Key: Name
        Value: Cribl LogStream default IAM role
  LogstreamInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path:
        Fn::Sub: /logstream/${AWS::StackName}/
      Roles:
      - Ref: LogstreamRole
  ec2LeaderAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - Fn::Select:
        - 0
        - Ref: subnetIds
      - Fn::Select:
        - 1
        - Ref: subnetIds
      TargetGroupARNs:
      - Ref: LeaderCriblTargetGroup
      - Ref: WorkerCriblTargetGroup
      DesiredCapacity: '1'
      MaxSize: '1'
      MinSize: '0'
      HealthCheckType: EC2
      LaunchTemplate:
        LaunchTemplateId:
          Ref: ec2leaderlaunchTemplate
        Version:
          Fn::GetAtt: ec2leaderlaunchTemplate.LatestVersionNumber
      Tags:
      - Key: Name
        Value: Cribl LogStream Leader Nodes ASG
        PropagateAtLaunch: false
  ec2LeaderAutoScalingGroupLifecycleHook:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      AutoScalingGroupName:
        Ref: ec2LeaderAutoScalingGroup
      DefaultResult: ABANDON
      HeartbeatTimeout: 3600
      LifecycleHookName: cribl-logstream-leader-shutdown
      LifecycleTransition: autoscaling:EC2_INSTANCE_TERMINATING
  ec2leaderlaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        InstanceInitiatedShutdownBehavior: terminate
        ImageId:
          Fn::FindInMap:
          - RegionMap
          - Ref: AWS::Region
          - HVM64
        InstanceType:
          Ref: leaderInstanceType
        IamInstanceProfile:
          Arn:
            Fn::GetAtt: LogstreamInstanceProfile.Arn
        SecurityGroupIds:
        - Ref: ec2leaderSecurityGroup
        UserData:
          Fn::Base64:
            Fn::Sub:
            - "#cloud-config\n\nruncmd:\n  - export AWS_DEFAULT_REGION=${Region}\n\
              \  - /usr/local/bin/configure_logstream.sh -m master -b ${s3DefaultDestinationBucket}\
              \ -u ${clusterAuthToken}\n  - sleep 10\n  - cloud-init query -f \"$(cat\
              \ /opt/cribl_build/users.json.j2)\" > /opt/cribl/local/cribl/auth/users.json\n\
              \  - chown -R cribl:cribl /opt/cribl\n"
            - clusterAuthToken:
                Ref: clusterAuthToken
              Region:
                Ref: AWS::Region
        TagSpecifications:
        - ResourceType: instance
          Tags:
          - Key: Name
            Value: Cribl LogStream Leader Node
  leaderShutdownEventRule:
    Type: AWS::Events::Rule
    Properties:
      Description: Cribl LogStream Leader Shutdown Event
      EventPattern:
        source:
        - aws.autoscaling
        detail-type:
        - EC2 Instance-terminate Lifecycle Action
        detail:
          AutoScalingGroupName:
          - Ref: ec2LeaderAutoScalingGroup
      State: ENABLED
      Targets:
      - Arn:
          Fn::GetAtt: functionLeaderShutdown.Arn
        Id: WorkerShutdownFunction
  lamdbaPermissionLeaderShutdownEventRule:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName:
        Ref: functionLeaderShutdown
      Action: lambda:InvokeFunction
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt: workerShutdownEventRule.Arn
  clusterAuthToken:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Cribl Logstream Cluster Auth Token
      GenerateSecretString:
        PasswordLength: 30
        ExcludePunctuation: true
  ec2WorkersAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity:
        Ref: workerCount
      MaxSize:
        Ref: workerCount
      MinSize:
        Ref: workerCount
      HealthCheckType: EC2
      LaunchTemplate:
        LaunchTemplateId:
          Ref: ec2WorkerslaunchTemplate
        Version:
          Fn::GetAtt: ec2WorkerslaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier:
      - Fn::Select:
        - 0
        - Ref: subnetIds
      - Fn::Select:
        - 1
        - Ref: subnetIds
      Tags:
      - Key: Name
        Value: Cribl LogStream Worker Nodes ASG
        PropagateAtLaunch: false
  ec2WorkersAutoScalingGroupLifecycleHook:
    Type: AWS::AutoScaling::LifecycleHook
    Properties:
      AutoScalingGroupName:
        Ref: ec2WorkersAutoScalingGroup
      DefaultResult: ABANDON
      HeartbeatTimeout: 3600
      LifecycleHookName: cribl-logstream-worker-shutdown
      LifecycleTransition: autoscaling:EC2_INSTANCE_TERMINATING
  ec2WorkerslaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        InstanceInitiatedShutdownBehavior: terminate
        ImageId:
          Fn::FindInMap:
          - RegionMap
          - Ref: AWS::Region
          - HVM64
        InstanceType:
          Ref: workerInstanceType
        IamInstanceProfile:
          Arn:
            Fn::GetAtt: LogstreamInstanceProfile.Arn
        SecurityGroupIds:
        - Ref: ec2WorkerSecurityGroup
        UserData:
          Fn::Base64:
            Fn::Sub:
            - "#cloud-config\n\nruncmd:\n  - export AWS_DEFAULT_REGION=${Region}\n\
              \  - /usr/local/bin/configure_logstream.sh -m worker -u ${clusterAuthToken}\
              \ -H ${LeaderLoadBalancerInternal.DNSName} -p 4200\n  - sed -i 's/false/true/g'\
              \ /opt/cribl/local/_system/instance.yml\n  - sleep 60\n  - systemctl\
              \ restart cribl\n"
            - clusterAuthToken:
                Ref: clusterAuthToken
              Region:
                Ref: AWS::Region
        TagSpecifications:
        - ResourceType: instance
          Tags:
          - Key: Name
            Value: Cribl LogStream Worker Instance
  workerShutdownEventRule:
    Type: AWS::Events::Rule
    Properties:
      Description: Cribl LogStream Worker Shutdown Event
      EventPattern:
        source:
        - aws.autoscaling
        detail-type:
        - EC2 Instance-terminate Lifecycle Action
        detail:
          AutoScalingGroupName:
          - Ref: ec2WorkersAutoScalingGroup
      State: ENABLED
      Targets:
      - Arn:
          Fn::GetAtt: functionWorkerShutdown.Arn
        Id: WorkerShutdownFunction
  lamdbaPermissionWorkerShutdownEventRule:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName:
        Ref: functionWorkerShutdown
      Action: lambda:InvokeFunction
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt: workerShutdownEventRule.Arn
  functionLeaderShutdown:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: "import boto3\nimport logging\nimport json\nimport time\nimport os\n\
          \nssm = boto3.client('ssm')\nautoscaling = boto3.client('autoscaling')\n\
          \n# Logging\nlog = logging.getLogger()\nlog.setLevel(logging.DEBUG)\n\n\
          def handler(event, context):\n  log.debug(\"Received event {}\".format(json.dumps(event)))\n\
          \n  command = ssm.send_command(\n    InstanceIds=[event['detail']['EC2InstanceId'],],\n\
          \    DocumentName='AWS-RunShellScript',\n    Comment='Gracefully terminate\
          \ Cribl LogStream leader node',\n    Parameters={\"commands\":[\"systemctl\
          \ disable cribl\",\"systemctl daemon-reload\",\"systemctl stop cribl\"],\"\
          workingDirectory\":[\"\"],\"executionTimeout\":[\"3600\"]},\n    CloudWatchOutputConfig={\n\
          \        'CloudWatchOutputEnabled': True\n    }\n  )\n\n  command_id = command['Command']['CommandId']\n\
          \n  for x in range(0,59):\n    time.sleep(10)\n    response = ssm.get_command_invocation(\n\
          \        CommandId=command_id,\n        InstanceId=event['detail']['EC2InstanceId'],\n\
          \    )\n    if response.get('Status') == 'Success':\n      break\n    else:\n\
          \      continue\n\n  autoscaling.complete_lifecycle_action(\n    LifecycleHookName=event['detail']['LifecycleHookName'],\n\
          \    AutoScalingGroupName=event['detail']['AutoScalingGroupName'],\n   \
          \ LifecycleActionToken=event['detail']['LifecycleActionToken'],\n    LifecycleActionResult='CONTINUE',\n\
          \    InstanceId=event['detail']['EC2InstanceId']\n  )\n"
      Description: Cribl LogStream Leader Shutdown
      Handler: index.handler
      Role:
        Fn::GetAtt:
        - functionLeaderShutdownRole
        - Arn
      Runtime: python3.7
      Timeout: 600
      Tags:
      - Key: lambda:createdBy
        Value: SAM
  functionLeaderShutdownRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action:
          - sts:AssumeRole
          Effect: Allow
          Principal:
            Service:
            - lambda.amazonaws.com
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
      - PolicyName: functionLeaderShutdownRolePolicy0
        PolicyDocument:
          Statement:
          - Action:
            - ssm:SendCommand
            Effect: Allow
            Resource: '*'
            Condition:
              StringEquals:
                aws:ResourceTag/aws:ec2launchtemplate:id:
                  Ref: ec2leaderlaunchTemplate
          - Action:
            - ssm:SendCommand
            Effect: Allow
            Resource:
              Fn::Sub: arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
          - Action:
            - autoscaling:CompleteLifecycleAction
            Effect: Allow
            Resource:
              Fn::Sub: arn:${AWS::Partition}:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${ec2WorkersAutoScalingGroup}
          - Action:
            - ssm:GetCommandInvocation
            Effect: Allow
            Resource: '*'
      Tags:
      - Key: lambda:createdBy
        Value: SAM
  functionWorkerShutdown:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: "import boto3\nimport logging\nimport json\nimport time\nimport os\n\
          \nssm = boto3.client('ssm')\nautoscaling = boto3.client('autoscaling')\n\
          \n# Logging\nlog = logging.getLogger()\nlog.setLevel(logging.DEBUG)\n\n\
          def handler(event, context):\n  log.debug(\"Received event {}\".format(json.dumps(event)))\n\
          \n  command = ssm.send_command(\n    InstanceIds=[event['detail']['EC2InstanceId'],],\n\
          \    DocumentName='AWS-RunShellScript',\n    Comment='Gracefully terminate\
          \ Cribl LogStream worker node',\n    Parameters={\"commands\":[\"systemctl\
          \ disable cribl\",\"systemctl daemon-reload\",\"systemctl stop cribl\"],\"\
          workingDirectory\":[\"\"],\"executionTimeout\":[\"3600\"]},\n    CloudWatchOutputConfig={\n\
          \        'CloudWatchOutputEnabled': True\n    }\n  )\n\n  command_id = command['Command']['CommandId']\n\
          \n  for x in range(0,59):\n    time.sleep(10)\n    response = ssm.get_command_invocation(\n\
          \        CommandId=command_id,\n        InstanceId=event['detail']['EC2InstanceId'],\n\
          \    )\n    if response.get('Status') == 'Success':\n      break\n    else:\n\
          \      continue\n\n  autoscaling.complete_lifecycle_action(\n    LifecycleHookName=event['detail']['LifecycleHookName'],\n\
          \    AutoScalingGroupName=event['detail']['AutoScalingGroupName'],\n   \
          \ LifecycleActionToken=event['detail']['LifecycleActionToken'],\n    LifecycleActionResult='CONTINUE',\n\
          \    InstanceId=event['detail']['EC2InstanceId']\n  )\n"
      Description: Cribl LogStream Worker Shutdown
      Handler: index.handler
      Role:
        Fn::GetAtt:
        - functionWorkerShutdownRole
        - Arn
      Runtime: python3.7
      Timeout: 600
      Tags:
      - Key: lambda:createdBy
        Value: SAM
  functionWorkerShutdownRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action:
          - sts:AssumeRole
          Effect: Allow
          Principal:
            Service:
            - lambda.amazonaws.com
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
      - PolicyName: functionWorkerShutdownRolePolicy0
        PolicyDocument:
          Statement:
          - Action:
            - ssm:SendCommand
            Effect: Allow
            Resource: '*'
            Condition:
              StringEquals:
                aws:ResourceTag/aws:ec2launchtemplate:id:
                  Ref: ec2WorkerslaunchTemplate
          - Action:
            - ssm:SendCommand
            Effect: Allow
            Resource:
              Fn::Sub: arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
          - Action:
            - autoscaling:CompleteLifecycleAction
            Effect: Allow
            Resource:
              Fn::Sub: arn:${AWS::Partition}:autoscaling:${AWS::Region}:${AWS::AccountId}:autoScalingGroup:*:autoScalingGroupName/${ec2WorkersAutoScalingGroup}
          - Action:
            - ssm:GetCommandInvocation
            Effect: Allow
            Resource: '*'
      Tags:
      - Key: lambda:createdBy
        Value: SAM
Rules:
  SubnetsInVPC:
    Assertions:
    - Assert:
        Fn::EachMemberIn:
        - Fn::ValueOfAll:
          - AWS::EC2::Subnet::Id
          - VpcId
        - Fn::RefAll: AWS::EC2::VPC::Id
      AssertDescription: All subnets must in the VPC
